devops/gc/deploy/templates/legal-virtual-service.yaml
#  Copyright 2025 Google LLC
#  Copyright 2025 EPAM
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: { { .Values.conf.appName | quote } }
  namespace: { { .Release.Namespace | quote } }
spec:
  hosts:
    - { { .Values.global.domain | quote } }
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            prefix: "/api/legal/v1"
      route:
        - destination:
            port:
              number: 80
            host:
              {
                {
                  printf "%s.%s.svc.cluster.local" .Values.conf.appName .Release.Namespace | quote,
                },
              }
